<resources>
    <string name="app_name">ClauseMatch</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Mikhail Mazurkevich</string>
    <string name="nav_header_subtitle">mikhail.mazurkevich@clausematch.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign In to Clausematch</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="bottom_sheet_option_camera">Use Camera</string>
    <string name="bottom_sheet_option_gallery">Upload from Gallery</string>
    <string name="bottom_sheet_option_heading">Add Photo</string>
    <string name="bottom_sheet_option_remove_photo">Remove Photo</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>



    <!-- New design -->
    <string name="title_documents">Documents</string>
    <string name="title_approvals">Approvals</string>
    <string name="title_users">Users</string>
    <string name="doc_action_chat">Document comments</string>
    <string name="doc_action_pdf">Preview document in PDF</string>
    <string name="doc_action_users">Manage users</string>
    <string name="login">Login</string>
</resources>
